Fixes ISSUE-51108: Fix JDK20 deprecation warnings related to new URL
JDK20 deprecates using the new URL constructor.
Suggested replacement is to go via new URI(...).toURL() instead.
The URI class is already present since Java 1.4