@@ -11,7 +11,7 @@
  * under the License. 
  * The Original Code is Openbravo ERP. 
  * The Initial Developer of the Original Code is Openbravo SLU 
- * All portions are Copyright (C) 2009-2014 Openbravo SLU 
+ * All portions are Copyright (C) 2009-2022 Openbravo SLU
  * All Rights Reserved. 
  * Contributor(s):  ______________________________________.
  ************************************************************************
@@ -25,6 +25,7 @@ import java.io.File;
 import java.io.FileReader;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.util.ArrayList;
@@ -341,7 +342,7 @@ public class GenerateEntityModelWiki extends OBBaseTest {
         + URLEncoder.encode(TOKEN, "utf-8");
     contentStr += "&wpTextbox1=" + content;
 
-    URL url = new URL(WIKI_URL + "?action=submit&title=" + page);
+    URL url = new URI(WIKI_URL + "?action=submit&title=" + page).toURL();
     HttpURLConnection urlConn = (HttpURLConnection) url.openConnection();
     urlConn.setRequestProperty("Cookie", COOKIE);
 
